Bug 976510 - Calculate display size according to pixel aspect-ratio. r=cpearce